Done with the home page, added footer, fixed background, forms

--- a/booster.html
+++ b/booster.html
@@ -5,8 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Booster-Pet Food</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
+    <div id="fb-root"></div>
+    <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v22.0"
+    ></script>
     <header>
       <div class="container">
         <div>
@@ -152,6 +166,94 @@
       </div>
     </div>
 
-    <div></div>
+    <div class="social-handle">
+      <div class="fb-container">
+        <div
+          class="fb-page"
+          data-href="https://www.facebook.com/profile.php?id=61573405861095"
+          data-tabs="timeline"
+          data-width="400"
+          data-height="500"
+          data-small-header="false"
+          data-adapt-container-width="true"
+          data-hide-cover="false"
+          data-show-facepile="true"
+        >
+          <blockquote
+            cite="https://www.facebook.com/profile.php?id=61573405861095"
+            class="fb-xfbml-parse-ignore"
+          >
+            <a href="https://www.facebook.com/profile.php?id=61573405861095"
+              >Pet Link Haven</a
+            >
+          </blockquote>
+        </div>
+      </div>
+
+      <div class="about">
+        Visit our facebook page for more <br />information and advice about
+        our<br />
+        product
+      </div>
+    </div>
+
+    <div class="contact">
+      <h4>Contact Us</h4>
+    </div>
+
+    <div class="lead">
+      <div>
+        <form action="">
+          <label for="">Name</label>
+          <input type="text" />
+          <label for="">Email</label>
+          <input type="email" name="" required />
+
+          <button type="submit">Continue</button>
+        </form>
+      </div>
+    </div>
+
+    <footer>
+      <div class="Address">
+        <img src="./media/logo-removebg-preview.png" alt="" />
+
+        <div>
+          <p>
+            <strong>Product</strong> <br /><br />All life stages <br />For
+            puppies <br />
+            Small breeds <br />Jerky cut <br />Can food
+          </p>
+        </div>
+
+        <div>
+          <p>
+            <strong>About Us</strong> <br /><br />Your dog will obtain a perfect
+            amount of <br />spirulina, probiotics, antioxidants, glucosamine
+            <br />
+            and chondroitin sulfate and protein from chicken! <br />
+            Keep your dog in a high quality diet with Booster
+          </p>
+        </div>
+
+        <div>
+          <p>
+            <strong>Contact Us</strong> <br /><br />Learn how you could sell
+            this brand exclusively in <br />your local market <br /><a href="#"
+              ><i class="fa-brands fa-square-facebook"></i
+            ></a>
+          </p>
+        </div>
+      </div>
+
+      <div>
+        <p>
+          Booster In Nigeria © Pet Link Haven Website Developed by
+          <a href="#"
+            ><span style="color: rgb(187, 149, 12)">Sophie4Tech</span></a
+          >
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
